--- a/index.html
+++ b/index.html
@@ -333,5 +333,15 @@
     <footer>
         <p>Created by <a href="https://zacharynicoll.com/">Zachary Nicoll</a> for funzies. Not affiliated with Gamewright or Quixx.</p>
     </footer>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PCCRPFJSST"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-PCCRPFJSST');
+    </script>
 </body>
 </html>
