Adds a description, because why not.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quixx Online</title>
+    <meta name=”description” content="Super simple scorecard for a quick game of Qwixx!" />
+    <meta name=”keywords” content="qwixx,quixx" />
+    <title>Qwixx Online</title>
     <link rel="stylesheet" href="style.css">
     <script
         src="https://kit.fontawesome.com/ca00d01854.js"
@@ -331,7 +333,7 @@
     </div>
 
     <footer>
-        <p>Created by <a href="https://zacharynicoll.com/">Zachary Nicoll</a> for funzies. Not affiliated with Gamewright or Quixx.</p>
+        <p>Created by <a href="https://zacharynicoll.com/">Zachary Nicoll</a> for funzies. Not affiliated with Gamewright or Qwixx.</p>
     </footer>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
