Made final number/lock selectable only with 5 nums

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           </label>
 
           <input id="red-twelve" type="checkbox" />
-          <label class="number" for="red-twelve">
+          <label class="number last-number" for="red-twelve">
               <span>12</span>
               <i class="fa-solid fa-xmark"></i>
           </label>
@@ -102,7 +102,7 @@
             </label>
 
             <input id="yellow-twelve" type="checkbox" />
-            <label class="number" for="yellow-twelve">
+            <label class="number last-number" for="yellow-twelve">
                 <span>12</span>
                 <i class="fa-solid fa-xmark"></i>
             </label>
@@ -176,7 +176,7 @@
             </label>
 
             <input id="green-two" type="checkbox" />
-            <label class="number" for="green-two">
+            <label class="number last-number" for="green-two">
                 <span>2</span>
                 <i class="fa-solid fa-xmark"></i>
             </label>
@@ -250,7 +250,7 @@
             </label>
 
             <input id="blue-two" type="checkbox" />
-            <label class="number" for="blue-two">
+            <label class="number last-number" for="blue-two">
                 <span>2</span>
                 <i class="fa-solid fa-xmark"></i>
             </label>
